--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Gnuk - software for GnuPG USB Token
 
-							   Version 0.15
-							     2011-11-24
+							   Version 0.16
+							     2011-12-1x
 						           Niibe Yutaka
 				      Free Software Initiative of Japan
 
@@ -9,8 +9,8 @@ What's Gnuk?
 ============
 
 Gnuk is software implementation of a USB token for GNU Privacy Guard.
-Gnuk supports OpenPGP card protocol version 2, and it runs on STM32
-processor.
+Gnuk supports OpenPGP card protocol version 2, and it runs on
+STM32F103 processor.
 
 I wish that Gnuk will be a developer's soother who uses GnuPG.  I have
 been nervous of storing secret key(s) on usual secondary storage.
@@ -94,21 +94,22 @@ Qa: With GNOME, I can't use Gnuk Token for SSH.  How can we use it for SSH?
 Aa: You need to deactivate seahorse-agent and gnome-keyring, but use
     gpg-agant for the role of ssh-agent.  For gnome-keyring please do:
 
-    $ gconftool-2 --type bool --set /apps/gnome-keyring/daemon-components/ssh false
+      $ gconftool-2 --type bool --set /apps/gnome-keyring/daemon-components/ssh false
 
 Qb: With GNOME 3, I can't use Gnuk Token at all.  Why?
 Ab: That's because gnome-keyring-daemon interferes GnuPG.  Type:
 
-    $ gnome-session-properties
+      $ gnome-session-properties
 
-and at the tab of "Startup Programs", disable check buttons for "GPG Password Agent" and "SSH Key Agent".
+    and at the tab of "Startup Programs", disable check buttons for
+    "GPG Password Agent" and "SSH Key Agent".
 
 
 
 Release notes
 =============
 
-This is sixteenth release of Gnuk.  While it works well for specific
+This is seventeenth release of Gnuk.  While it works well for specific
 usages and it is considered stable, it is still somewhat experimental.
 
 Tested features are:
@@ -171,6 +172,11 @@ as 50 JPY.
 Another PIN-pad support is connecting rotary encoder, push switch and
 7-segment LED display.  Both of PIN verification and PIN modification
 are supported for this circuit extension.
+
+Recently, "DnDpinentry" qsupport is added.  This is using normal file
+manager for pinentry.  User does "drag and drop" folders and it will
+be pin entry.  This feature doesn't require any additional hardware.
+See doc/settings-for-DnDpinentry for your desktop configuration.
 
 
 Souce code
