--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-01-05  Niibe Yutaka  <gniibe@fsij.org>
+
+	* tool/pinpadtest.py: Rename from pinpad-test.py.
+
 2011-12-28  Niibe Yutaka  <gniibe@fsij.org>
 
 	* src/usb_prop.c (SetEPRxCount_allocated_size): New.
