--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Gnuk - software for GnuPG USB Token
 
-							   Version 0.16
-							     2011-12-14
+							   Version 0.17
+							     2012-02-02
 						           Niibe Yutaka
 				      Free Software Initiative of Japan
 
@@ -104,12 +104,15 @@ Ab: That's because gnome-keyring-daemon interferes GnuPG.  Type:
     and at the tab of "Startup Programs", disable check buttons for
     "GPG Password Agent" and "SSH Key Agent".
 
+Qc: Do you know a good SWD debugger to connect FST-01 or something?
+Ac: Perhaps, you can use a part of STM32F4 Discovery Kit as SWD
+    debugger.  It seems that there is a free software tool for that.
 
 
 Release notes
 =============
 
-This is seventeenth release of Gnuk.  While it works well for specific
+This is eighteenth release of Gnuk.  While it works well for specific
 usages and it is considered stable, it is still somewhat experimental.
 
 Tested features are:
@@ -127,18 +130,13 @@ Tested features are:
 	* Changing value of password status bytes (0x00C4): forcesig
 	* Verify with pin pad
 	* Modify with pin pad
+	* Card holder certificate
 
 It is known not-working well:
 
 	* For some version of kernel and libccid, --enable-debug can't
-          work well.  Please disable DEBUG option if it doesn't work well.
-
-	* Card holder certificate
-	  It is implemented in Gnuk side.  But its large size matters
-	  (> 1KB).  Some versions of GnuPG cannot handle a data object
-	  of large size with PC/SC backend.  Specifically,
-	  handle_transmit function in pcsc-wrapper.c uses the buffer
-	  of size 1024-byte.
+          work well.  Please make sure to disable DEBUG option if it
+          doesn't work well.
 
 Not supported feature(s):
 
@@ -241,8 +239,7 @@ Gnuk is distributed with external source code.
 Host Requirements
 =================
 
-For GNU/Linux, libccid version >= 1.3.11 is required.
-libccid version == 1.3.9 is known not working well by the issue [r4235].
+For GNU/Linux, libccid version >= 1.3.11 is recommended.
 
 I think that it should not be requirment but the kernel version of my use is:
 Linux version 2.6.32-5-686 (Debian 2.6.32-18) (ben@decadent.org.uk) (gcc version 4.3.5 (Debian 4.3.5-2) ) #1 SMP Sat Jul 24 02:27:10 UTC 2010
