--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* Version 0.17.
 
 	* src/usb_desc.c (gnukStringSerial): Updated.
+	(gnukConfigDescriptor): Short APDU only.
 
 	* tool/gnuk_put_binary.py (cmd_get_response): New.
 	(cmd_select_openpgp, cmd_get_data): Call cmd_get_response.
