--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,139 @@
+2012-05-10  Niibe Yutaka  <gniibe@fsij.org>
+
+	* STM32_USB-FS-Device_Driver, Virtual_COM_Port: Remove.
+
+	* src/usb_lld.c (#include): Don't include usb_lib.h.
+	(RECIPIENT, REG_BASE PMA_ADDR, CNTR, ISTR, FNR, DADDR, BTABLE)
+	(ISTR_CTR, ISTR_DOVR, ISTR_ERR, ISTR_WKUP, ISTR_SUSP, ISTR_RESET)
+	(ISTR_SOF, ISTR_ESOF, ISTR_DIR, ISTR_EP_ID, CLR_CTR, CLR_DOVR)
+	(CLR_ERR, CLR_WKUP, CLR_SUSP, CLR_RESET, CLR_SOF, CLR_ESOF)
+	(CNTR_CTRM, CNTR_DOVRM, CNTR_ERRM, CNTR_WKUPM, CNTR_SUSPM)
+	(CNTR_RESETM, CNTR_SOFM, CNTR_ESOFM, CNTR_RESUME, CNTR_FSUSP)
+	(CNTR_LPMODE, CNTR_PDWN, CNTR_FRES, DADDR_EF, DADDR_ADD)
+	(EP_CTR_RX, EP_DTOG_RX, EPRX_STAT, EP_SETUP, EP_T_FIELD, EP_KIND)
+	(EP_CTR_TX, EP_DTOG_TX, EPTX_STAT, EPADDR_FIELD, EPREG_MASK)
+	(EP_TX_DIS, EP_TX_STALL, EP_TX_NAK, EP_TX_VALID, EPTX_DTOG1)
+	(EPTX_DTOG2, EP_RX_DIS, EP_RX_STALL, EP_RX_NAK, EP_RX_VALID)
+	(EPRX_DTOG1, EPRX_DTOG2): New. Compatible to ST's USB-FS-Device_Lib.
+	(CH_IRQ_HANDLER): Call usb_interrupt_handler (was: USB_Istr).
+	(EP1_IN_Callback, EP2_IN_Callback, EP3_IN_Callback)
+	(EP4_IN_Callback, EP5_IN_Callback, EP6_IN_Callback)
+	(EP7_IN_Callback, EP1_OUT_Callback, EP2_OUT_Callback)
+	(EP3_OUT_Callback, EP4_OUT_Callback, EP5_OUT_Callback)
+	(EP6_OUT_Callback, EP7_OUT_Callback): New.  Implement here.
+	Compatible to ST's USB-FS-Device_Lib.
+	(USB_MAX_PACKET_SIZE): New.
+	(GET_STATUS, CLEAR_FEATURE, RESERVED1, SET_FEATURE, RESERVED2)
+	(SET_ADDRESS, GET_DESCRIPTOR, SET_DESCRIPTOR, GET_CONFIGURATION)
+	(SET_CONFIGURATION, GET_INTERFACE, SET_INTERFACE)
+	(SYNCH_FRAME,TOTAL_REQUEST): New for USB control transfer.
+	(enum CONTROL_STATE): New for state machine of control pipe.
+	(enum FEATURE_SELECTOR): New.
+	(struct DATA_INFO, struct CONTROL_INFO, struct DEVICE_INFO): New.
+	(ctrl_p, dev_p, data_p, Control_Info, Device_Info, Data_Info):
+	New.
+	(usb_lld_stall_tx, usb_lld_stall_rx)
+	(usb_lld_tx_data_len, usb_lld_txcpy, usb_lld_tx_enable)
+	(usb_lld_write, usb_lld_rx_enable, usb_lld_rx_data_len)
+	(usb_lld_rxcpy): Move from usb_lld.h and not inline.
+	(usb_lld_reset, usb_lld_setup_endpoint)
+	(usb_lld_set_configuration, usb_lld_current_configuration)
+	(usb_lld_set_feature, usb_lld_set_data_to_send): New.
+	(usb_lld_to_pmabuf, usb_lld_from_pmabuf): Clean up.
+	(usb_lld_init): New implementation.
+	(st103_set_btable, st103_get_istr, st103_set_istr, st103_set_cntr)
+	(st103_set_daddr, st103_set_epreg, st103_get_epreg)
+	(st103_set_tx_addr, st103_get_tx_addr, st103_set_tx_count)
+	(st103_get_tx_count, st103_set_rx_addr, st103_get_rx_addr)
+	(st103_set_rx_buf_size, st103_get_rx_count, st103_ep_clear_ctr_rx)
+	(st103_ep_clear_ctr_tx, st103_ep_set_rxtx_status)
+	(st103_ep_set_rx_status, st103_ep_get_rx_status)
+	(st103_ep_set_tx_status, st103_ep_get_tx_status)
+	(st103_ep_clear_dtog_rx, st103_ep_clear_dtog_tx): New lower-level
+	functions for USB related registers access.
+	(usb_interrupt_handler, usb_handle_transfer)
+	(handle_datastage_out, handle_datastage_in, handle_setup0)
+	(handle_in0, handle_out0)
+	(std_none, std_get_status, std_clear_feature, std_set_feature,
+	std_set_address, std_get_descriptor, std_get_configuration,
+	std_set_configuration, std_get_interface, std_set_interface)
+	(std_request_handler): New USB stack implementation.
+
+	* src/usb_lld.h (usb_lld_stall_tx, usb_lld_stall_rx)
+	(usb_lld_tx_data_len, usb_lld_txcpy, usb_lld_tx_enable)
+	(usb_lld_write, usb_lld_rx_enable, usb_lld_rx_data_len)
+	(usb_lld_rxcpy): Those are not inline functions anymore.
+	(USB_DEVICE_DESCRIPTOR_TYPE, USB_CONFIGURATION_DESCRIPTOR_TYPE)
+	(USB_STRING_DESCRIPTOR_TYPE, USB_INTERFACE_DESCRIPTOR_TYPE)
+	(USB_ENDPOINT_DESCRIPTOR_TYPE, STANDARD_ENDPOINT_DESC_SIZE)
+	(ENDP0, ENDP1, ENDP2, ENDP3, ENDP4, ENDP5, ENDP6, ENDP7)
+	(EP_BULK, EP_CONTROL, EP_ISOCHRONOUS, EP_INTERRUPT)
+	(DEVICE_RECIPIENT, INTERFACE_RECIPIENT, ENDPOINT_RECIPIENT)
+	(ENDPOINT_RECIPIENT, OTHER_RECIPIENT)
+	(DEVICE_DESCRIPTOR, CONFIG_DESCRIPTOR, STRING_DESCRIPTOR)
+	(INTERFACE_DESCRIPTOR, ENDPOINT_DESCRIPTOR)
+	(REQUEST_TYPE, STANDARD_REQUEST, CLASS_REQUEST, VENDOR_REQUEST)
+	(USB_UNSUPPORT, USB_SUCCESS)
+	(USB_EVENT_RESET, USB_EVENT_ADDRESS, USB_EVENT_CONFIG)
+	(USB_EVENT_SUSPEND, USB_EVENT_WAKEUP, USB_EVENT_STALL)
+	(USB_SET_INTERFACE, USB_GET_INTERFACE, USB_QUERY_INTERFACE)
+	(UNCONNECTED, ATTACHED, POWERED, SUSPENDED, ADDRESSED)
+	(CONFIGURED, USB_Cable_Config): New.  Compatible to ST's
+	USB-FS-Device_Lib.
+	(struct Descriptor, struct usb_device_method)
+	(Device_Descriptor, Config_Descriptor, String_Descriptors)
+	(STM32_USB_IRQ_PRIORITY, bDeviceState, Device_Method)
+	(usb_lld_init, usb_lld_reset, usb_lld_setup_endpoint)
+	(usb_lld_set_configuration, usb_lld_current_configuration)
+	(usb_lld_set_feature, usb_lld_set_data_to_send): New API.
+
+	* src/usb_prop.c(#include): Only include usb_lld.h for USB.
+	(SetEPRxCount_allocated_size): Remove.
+	(struct line_coding, line_coding, Virtual_Com_Port_Data_Setup)
+	(Virtual_Com_Port_NoData_Setup): Add from usb-cdc-vport.c.
+	(gnuk_device_init, gnuk_device_reset, gnuk_setup_with_data)
+	(gnuk_setup_with_nodata): Follow the API change of USB stack.
+	(gnuk_setup_endpoints_for_interface, gnuk_get_descriptor)
+	(gnuk_usb_event, gnuk_interface): New.
+	(gnuk_device_SetConfiguration, gnuk_device_SetInterface)
+	(gnuk_device_SetDeviceAddress, gnuk_device_Status_In)
+	(gnuk_device_Status_Out, gnuk_device_GetDeviceDescriptor)
+	(gnuk_device_GetConfigDescriptor, gnuk_device_GetStringDescriptor)
+	(gnuk_device_Get_Interface_Setting, gnuk_clock_frequencies)
+	(gnuk_data_rates, msc_lun_info, Device_Table)
+	(User_Standard_Requests): Remove.
+	(Device_Method): Replace Device_Property.
+
+	* src/usb_msc.c (#include): Only include usb_lld.h for USB.
+
+	* src/usb_endp.c (#include): Only include usb_lld.h for USB.
+	(EP5_OUT_Callback): Follow the API change of USB stack.
+
+	* src/usb_desc.c (#include): Only include usb_lld.h for USB.
+	Add usb_conf.h.
+	(Device_Descriptor, Config_Descriptor): Follow the API change
+	of USB stack.
+	(String_Descriptors): New, rename from String_Descriptor.
+
+	* src/usb_conf.h (EP_NUM, BTABLE_ADDRESS, IMR_MSK): Remove.
+	(NUM_STRING_DESC): Add.
+
+	* src/usb-icc.c (#include): Only include usb_lld.h for USB.
+
+	* src/usb-cdc-vport.c, src/usb_prop.h: Remove.
+
+	* src/stmusb.mk, src/vcomport.mk: Remove.
+
+	* src/main.c (#include): Only include usb_lld.h for USB.
+	(main): Remove call to USB_Init.
+
+	* src/Makefile.in (include): Remove stmusb.mk, vcomport.mk.
+	(VCOMSRC) [ENABLE_VCOMPORT]: Add.
+	(INCDIR): Remove STMUSBINCDIR and VCOMDIR.
+
+	* boards/common/hw_config.c (Enter_LowPowerMode)
+	(Leave_LowPowerMode): Remove.
+
 2012-02-02  Niibe Yutaka  <gniibe@fsij.org>
 
 	* Version 0.17.
