--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-14  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/hardclock.c: Remove.
+
 	* src/usb_prop.c (MSC_INTERFACE_NO): New.
 	(gnuk_setup_endpoints_for_interface): Cleanup with MSC_INTERFACE_NO.
 	(gnuk_setup_with_data, gnuk_setup_with_nodata): Likewise.
@@ -8,7 +10,8 @@
 
 	* src/usb-msc.h: Rename from usb_msc.h.
 
-	* src/Makefile.in: Follow the rename of usb-msc.c.
+	* src/Makefile.in: Follow the rename of usb-msc.c and remove of
+	hardclock.c.
 
 2012-05-12  Niibe Yutaka  <gniibe@fsij.org>
 
