--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-25  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/gnuk.ld.in (.sys): New section.
+
 	* boards/OLIMEX_STM32_H103/board.h (SET_USB_CONDITION)
 	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
 	* boards/OLIMEX_STM32_H103/board.c (USB_Cable_Config, set_led):
