--- a/ChangeLog
+++ b/ChangeLog
@@ -1,12 +1,13 @@
 2012-05-28  Niibe Yutaka  <gniibe@fsij.org>
 
-	* src/gnuk.ld.in (.sys): Add alignment settings.
-
-	* boards/common/hwinit.c (hwinit0): Define here.
-	* boards/*/board.c (hwinit0): Removed.
+	* boards/*/board.c (hwinit0): Removed...
+	* boards/common/hwinit.c (hwinit0): ... and define here.
+	(hwinit0) [DFU_SUPPORT]:  Don't set SCB->VTOR here.
+	* src/sys.c (reset) [DFU_SUPPORT]: Set SCB->VTOR here.
 
 	* polarssl-0.14.0/library/aes.c (FT0, FT1, FT2): Specify the
 	section ".sys", so that we will have more room for flash ROM.
+	* src/gnuk.ld.in (.sys): Add alignment settings.
 
 	* tool/gnuk_upgrade.py (main): First 4096-byte of Gnuk is system
 	block.  Don't send it to reGNUal.
