--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2012-05-29  Niibe Yutaka  <gniibe@fsij.org>
+
+	* boards/STBEE_MINI/board.h (SET_USB_CONDITION, GPIO_USB)
+	(IOPORT_USB, SET_LED_CONDITION, GPIO_LED, IOPORT_LED)
+	(FLASH_PAGE_SIZE): New.
+	* boards/STBEE_MINI/board.c (USB_Cable_Config, set_led): Remove.
+
+	* boards/STBEE/board.h (SET_USB_CONDITION, GPIO_USB, IOPORT_USB)
+	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
+	* boards/STBEE/board.c (USB_Cable_Config, set_led): Remove.
+
+	* boards/CQ_STARM/board.h (SET_USB_CONDITION)
+	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
+	* boards/CQ_STARM/board.c (USB_Cable_Config, set_led): Remove.
+
 2012-05-28  Niibe Yutaka  <gniibe@fsij.org>
 
 	* boards/*/board.c (hwinit0): Removed...
@@ -27,21 +42,24 @@
 
 	* src/gnuk.ld.in (.sys): New section.
 
-	* boards/OLIMEX_STM32_H103/board.h (SET_USB_CONDITION)
-	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
+	* boards/OLIMEX_STM32_H103/board.h (SET_USB_CONDITION, GPIO_USB)
+	(IOPORT_USB, SET_LED_CONDITION, GPIO_LED, IOPORT_LED)
+	(FLASH_PAGE_SIZE): New.
 	* boards/OLIMEX_STM32_H103/board.c (USB_Cable_Config, set_led):
 	Remove.
 
-	* boards/STM32_PRIMER2/board.h (SET_USB_CONDITION)
-	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
+	* boards/STM32_PRIMER2/board.h (SET_USB_CONDITION, GPIO_USB)
+	(IOPORT_USB, SET_LED_CONDITION, GPIO_LED, IOPORT_LED)
+	(FLASH_PAGE_SIZE): New.
 	* boards/STM32_PRIMER2/board.c (USB_Cable_Config, set_led):
 	Remove.
 
-	* boards/FST_01_00/board.h (SET_USB_CONDITION)
-	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
+	* boards/FST_01_00/board.h (SET_USB_CONDITION, GPIO_USB)
+	(IOPORT_USB, SET_LED_CONDITION, GPIO_LED, IOPORT_LED)
+	(FLASH_PAGE_SIZE): New.
 	* boards/FST_01_00/board.c (USB_Cable_Config, set_led): Remove.
 
-	* boards/FST_01/board.h (SET_USB_CONDITION)
+	* boards/FST_01/board.h (SET_USB_CONDITION, GPIO_USB, IOPORT_USB)
 	(SET_LED_CONDITION, GPIO_LED, IOPORT_LED, FLASH_PAGE_SIZE): New.
 	* boards/FST_01/board.c (USB_Cable_Config, set_led): Remove.
 
