--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2012-05-29  Niibe Yutaka  <gniibe@fsij.org>
 
+	* src/call-rsa.c (rsa_verify): New function.
+
 	* polarssl-0.14.0/include/polarssl/rsa.h (rsa_pkcs1_verify)
 	* polarssl-0.14.0/library/rsa.c (rsa_pkcs1_verify): Fix API.
 
